--- a/src/partials/imageSearch.html
+++ b/src/partials/imageSearch.html
@@ -12,4 +12,12 @@
   <!-- Картки зображень -->
 </div>
 
-<button type="button" class="load-more">Load more</button>
+<button type="button" class="load-more button">
+  <span
+  class="spinner-border spinner-border-sm spinner is-hidden"
+  role="status"
+  aria-hidden="true"
+></span>
+
+<span class="label">Load more</span>
+</button>
